<resources>
    <string name="app_name">Safe to Net Coding Challenge</string>
    <string name="retry">Retry</string>
    <string name="error_message">Something went wrong</string>

    <string name="dialog_title">Safe to Net</string>
    <string name="dialog_message">Welcome to Safe to Net</string>
    <string name="engine_count">Engine Count</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="search">search</string>
    <string name="all_rockets">All Rockets</string>
    <string name="active_rockets">Active Rockets</string>

    <string name="ok_message">Ok</string>


</resources>
