<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_button"
    app:cardElevation="@dimen/eight_dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/eight_dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:padding="@dimen/four_dp"
            android:text="@string/name"
            app:layout_constraintEnd_toStartOf="@+id/tvDisplayName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDisplayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_marginEnd="@dimen/eight_dp"
            android:padding="@dimen/four_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_marginEnd="@dimen/eight_dp"
            android:padding="@dimen/four_dp"
            android:text="@string/country"
            app:layout_constraintEnd_toStartOf="@+id/tvDisplayCountry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvDisplayCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_marginEnd="@dimen/eight_dp"
            android:padding="@dimen/four_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvCountry"
            app:layout_constraintTop_toBottomOf="@+id/tvDisplayName" />

        <TextView
            android:id="@+id/tvEngineCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:padding="@dimen/four_dp"
            android:text="@string/engine_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCountry" />

        <TextView
            android:id="@+id/tvEngineCountDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_marginEnd="@dimen/eight_dp"
            android:padding="@dimen/four_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvEngineCount"
            app:layout_constraintTop_toBottomOf="@+id/tvDisplayCountry" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>